--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">JetPackApplication</string>
     <string name="title_activity_second">SecondActivity</string>
     <string name="title_activity_third">ThirdActivity</string>
+    <string name="title_activity_fourth">FourthActivity</string>
+    <string name="app_logo">App Logo</string>
+    <string name="my_t_store">MyTstore</string>
+    <string name="lets_shop">Let\'s Shop</string>
+    <string name="login">Login</string>
 </resources>
